--- a/style.css
+++ b/style.css
@@ -1,12 +1,33 @@
-#btn_1,#btn_2{
-  background-color: #33B4CE;
-  font-size: 150%;
-  border-width: 1px;
-  text-align: 50px;
-  border-color: #CC2424;
-  border-radius: 8px;
+#text{
+  font-size: 40px;
+  font-family: "helvetica";
 }
-#btn_1:hover{
-  background-color: #E33E31;
+.button{
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 5px 50px 75px 100px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
 
+.btn_1,.btn_2{
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+.btn_1:hover,.btn_2:hover{
+  background-color: #4CAF50;
+  color: white;
+}
+.btn_1:hover span{
+  display: none;
+}
+.btn_1:hover:before{
+  content: "Có, chắc chắn";
 }
