--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 p {
-    display: inline-block;
+    display: inline;
 }
 #text{
   font-size: 40px;
@@ -8,7 +8,7 @@ p {
 #text_2{
   font-size: 40px;
   font-family: "helvetica";
-  margin: 8px;
+  margin: 4px;
   cursor: pointer;
 }
 
