--- a/style.css
+++ b/style.css
@@ -4,13 +4,16 @@ p {
 .container{
   align-items: center;
 }
-#text{
+#text,#text_2{
   font-size: 40px;
   font-family: "helvetica";
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 #text_2{
-  font-size: 40px;
-  font-family: "helvetica";
   margin: 4px;
   cursor: pointer;
 }
