--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ p {
   -ms-user-select: none;
   user-select: none;
 }
+.answer-text{
+  user-select: none;
+}
 #text_2{
   margin: 4px;
   cursor: pointer;
@@ -28,7 +31,7 @@ p {
   display: inline-block;
   font-size: 16px;
   margin: 50px 75px 100px;
-  transition-duration: 0.4s;
+  transition-duration: 0.5s;
   cursor: pointer;
 }
 
@@ -36,6 +39,7 @@ p {
   background-color: white; 
   color: black; 
   border: 2px solid #4CAF50;
+  border-radius: 5px;
 }
 .btn_1:hover,.btn_2:hover{
   background-color: #4CAF50;
